--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     margin: 1em auto;
     font-family: 'Cantarell', sans-serif;
 }
-.content h1{
+h1{
      font-family: 'Fjalla One', sans-serif;
 }   
 .content li{
@@ -23,6 +23,6 @@
     font-size: 5em;
     color: #999;
     position: relative;
-    left: 30%;
+    left: 35%;
     margin-top: 1em;
 }
